# fedidex

./: .gitignore  README.md
back/: Cargo.toml  Rocket.toml
back/scanner/: Cargo.toml
back/scanner/src/: main.rs
back/server/: Cargo.toml
back/src/: .gitignore  instance.rs  main.rs  pinger.rs  scanner.rs  secret.rs
crawler/: crawl.js  package.json
front/: Cargo.toml  index.html  style.sass
front/src/: main.rs
front/src/components/: footer.rs  header.rs  instance.rs  instance_list.rs  instance_list_item.rs  instance_list_wrapper.rs  lazy_loading_list.rs  list_and_labels.rs  mod.rs  pretty_number.rs  search.rs  tabel_labels.rs
shared/: blacklist.json  instance.rs
