[package]
name = "fedidex_server"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = "1.0.147"
serde_json = "1.0.87"
error-chain = "0.12.4"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
scraper = "0.13.0"
fantoccini = "0.19.3"
regex = "1.6.0"
rocket = "0.5.0-rc.2"
tiberius = "0.11.3"
tokio-util = { version = "0.7.4", features = ["compat"] }
tokio = "1.21.2"
once_cell = "1.16.0"
async-std = "1.12.0"