[package]
name = "fedidex_web"
version = "0.1.0"
edition = "2021"

[dependencies]
#yew = { git = "https://github.com/yewstack/yew", branch = "master", features = ["csr"] }
yew = { version = "^0.19.3" }
serde = "1.0.147"
serde_json = "1.0.87"
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
yew-hooks = "^0.1.56"